# python_skeleton

./: .gitignore  AUTHORS  README.md  requirements_test.txt  setup.cfg  setup.py  tox.ini
samtest/: cmd.py
samtest/stevedore_test/: base.py  fields.py  simple.py
test/: base_test.py
