[metadata]
name = samtest
author = asfdsx
author-email = asdfsx@gmail.com
summary = python project skeleton
description-file = README.md
home-page = https://github.com/asdfsx/python_skeleton
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    samtest
data_files =
    etc/ = etc/*
[entry_points]
console_scripts =
    samtest = samtest.cmd:main
samtest.stevedore_test.formatter =
    simple = samtest.stevedore_test.simple:Simple
    field = samtest.stevedore_test.fields:FieldsList
    plain = samtest.stevedore_test.simple:Simple
